--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
