--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@fontsource/rubik": "^5.0.5",
     "@mantine/core": "^6.0.5",
     "@mantine/hooks": "^6.0.5",
     "@tabler/icons-react": "^2.12.0",
