--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -36,10 +36,14 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
-      - name: npm install, build, and test
-        run: |
-          npm ci
-          npm run build --if-present
+      - name: NPM Install
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+        env:
+          VITE_GITHUB_TOKEN: ${{ secrets.TABLE7_TOKEN }}
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
