--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint:fix": "eslint --fix src/**/*.{tsx,ts}",
     "format": "prettier --check \"**/*.{ts,tsx}\"",
     "format:fix": "prettier --write \"**/*.{ts,tsx}\"",
+    "tsc": "tsc --noEmit",
+    "check": "npm run format && npm run lint && npm run tsc",
     "fix": "npm run lint:fix && npm run format:fix"
   },
   "dependencies": {
