--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/hooks": "^7.3.2",
     "@tabler/icons-react": "^2.44.0",
     "@tanstack/react-query": "^4.28.0",
+    "epdx": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
